@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-19T01:21:35Z",
-  "count_outdated" : 342,
-  "uniques_outdated" : 194,
-  "count" : 369,
-  "uniques" : 212,
+  "timestamp" : "2022-06-19T16:18:40Z",
+  "count_outdated" : 343,
+  "uniques_outdated" : 195,
+  "count" : 370,
+  "uniques" : 213,
   "clones" : [
-    {
-      "timestamp": "2022-06-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 2,
@@ -102,6 +95,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
