@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-06-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -71,6 +66,11 @@
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
